<resources>
    <string name="app_name">LifeLog</string>
    <string name="logo_app">Logo App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>

    <string name="appname">AppName</string>
    <string name="lifelog">LifeLog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tvLogin">Login to Account</string>
    <string name="tvNewAcc">Need a New Account</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="tvRegister">Register</string>
    <string name="reg_btn_text">Create New Account</string>
    <string name="reg_ext_text">Already have an account</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="setup_name_hint">Your Name..</string>
    <string name="setup_btn_name">Save Account Settings</string>
    <string name="lg_img_def">Default Image</string>
    <string name="lg_log_title">Lifegroup Name</string>
    <string name="lg_log_attendance">Lifegroup Attendees</string>
    <string name="lg_log_post_btn">Post</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_account_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_vew_username">Username</string>
    <string name="card_view_date">Date</string>
    <string name="card_view_attendees_holder">Lorep ipsum dolor sit amet, soluta regione ubanitas vis in, qui elit populo ut.</string>
    <string name="card_view_attendess">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="card_view_image">Lifegroup_Image</string>
    <string name="card_view_userimage">Userimage</string>
    <string name="card_view_lifegroup">Lifegroup</string>
    <string name="btn_leaf_gray">Like Leaf Gray</string>
    <string name="like_leaf_count">0 Likes</string>
    <string name="user_comment">Username</string>
    <string name="user_comment_message">Posted Comment</string>
    <string name="label_comment">Comments</string>
    <string name="hint_comment_here">Comment here</string>
    <string name="user_image_commenter">Userimage</string>
    <string name="fragment_account">Account Fragment</string>
    <string name="comment_date">Date</string>
    <string name="comment_image_holder">Image Commented</string>

</resources>
